--- a/data_etl.ipynb
+++ b/data_etl.ipynb
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1551,6 +1551,7 @@
        "      <th>Name of School</th>\n",
        "      <th>Elementary, Middle, or High School</th>\n",
        "      <th>ZIP Code</th>\n",
+       "      <th>NAME</th>\n",
        "      <th>Environment Score</th>\n",
        "      <th>Graduation Rate %</th>\n",
        "      <th>College Enrollment Rate %</th>\n",
@@ -1562,6 +1563,7 @@
        "      <td>Charles G Hammond Elementary School</td>\n",
        "      <td>ES</td>\n",
        "      <td>60623</td>\n",
+       "      <td>Douglass</td>\n",
        "      <td>41</td>\n",
        "      <td>NDA</td>\n",
        "      <td>NDA</td>\n",
@@ -1571,6 +1573,7 @@
        "      <td>Charles G Hammond Elementary School</td>\n",
        "      <td>ES</td>\n",
        "      <td>60623</td>\n",
+       "      <td>Little Village</td>\n",
        "      <td>41</td>\n",
        "      <td>NDA</td>\n",
        "      <td>NDA</td>\n",
@@ -1580,6 +1583,7 @@
        "      <td>Charles G Hammond Elementary School</td>\n",
        "      <td>ES</td>\n",
        "      <td>60623</td>\n",
+       "      <td>Toman</td>\n",
        "      <td>41</td>\n",
        "      <td>NDA</td>\n",
        "      <td>NDA</td>\n",
@@ -1589,6 +1593,7 @@
        "      <td>Roswell B Mason Elementary School</td>\n",
        "      <td>ES</td>\n",
        "      <td>60623</td>\n",
+       "      <td>Douglass</td>\n",
        "      <td>44</td>\n",
        "      <td>NDA</td>\n",
        "      <td>NDA</td>\n",
@@ -1598,6 +1603,7 @@
        "      <td>Roswell B Mason Elementary School</td>\n",
        "      <td>ES</td>\n",
        "      <td>60623</td>\n",
+       "      <td>Little Village</td>\n",
        "      <td>44</td>\n",
        "      <td>NDA</td>\n",
        "      <td>NDA</td>\n",
@@ -1610,12 +1616,14 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1068</th>\n",
        "      <td>George F Cassell Elementary School</td>\n",
        "      <td>ES</td>\n",
        "      <td>60655</td>\n",
+       "      <td>Mount Greenwood</td>\n",
        "      <td>57</td>\n",
        "      <td>NDA</td>\n",
        "      <td>NDA</td>\n",
@@ -1625,6 +1633,7 @@
        "      <td>Mount Greenwood Elementary School</td>\n",
        "      <td>ES</td>\n",
        "      <td>60655</td>\n",
+       "      <td>Mount Greenwood</td>\n",
        "      <td>58</td>\n",
        "      <td>NDA</td>\n",
        "      <td>NDA</td>\n",
@@ -1634,6 +1643,7 @@
        "      <td>Chicago High School for Agricultural Sciences</td>\n",
        "      <td>HS</td>\n",
        "      <td>60655</td>\n",
+       "      <td>Mount Greenwood</td>\n",
        "      <td>49</td>\n",
        "      <td>70.7</td>\n",
        "      <td>79.6</td>\n",
@@ -1643,6 +1653,7 @@
        "      <td>South Loop Elementary School</td>\n",
        "      <td>ES</td>\n",
        "      <td>60605</td>\n",
+       "      <td>Harold Washtington Library Center</td>\n",
        "      <td>34</td>\n",
        "      <td>NDA</td>\n",
        "      <td>NDA</td>\n",
@@ -1652,13 +1663,14 @@
        "      <td>William Jones College Preparatory High School</td>\n",
        "      <td>HS</td>\n",
        "      <td>60605</td>\n",
+       "      <td>Harold Washtington Library Center</td>\n",
        "      <td>64</td>\n",
        "      <td>90.1</td>\n",
        "      <td>86.9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1073 rows × 6 columns</p>\n",
+       "<p>1073 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1675,42 +1687,55 @@
        "1071                   South Loop Elementary School   \n",
        "1072  William Jones College Preparatory High School   \n",
        "\n",
-       "0    Elementary, Middle, or High School ZIP Code Environment Score  \\\n",
-       "0                                    ES    60623                41   \n",
-       "1                                    ES    60623                41   \n",
-       "2                                    ES    60623                41   \n",
-       "3                                    ES    60623                44   \n",
-       "4                                    ES    60623                44   \n",
-       "...                                 ...      ...               ...   \n",
-       "1068                                 ES    60655                57   \n",
-       "1069                                 ES    60655                58   \n",
-       "1070                                 HS    60655                49   \n",
-       "1071                                 ES    60605                34   \n",
-       "1072                                 HS    60605                64   \n",
+       "0    Elementary, Middle, or High School ZIP Code  \\\n",
+       "0                                    ES    60623   \n",
+       "1                                    ES    60623   \n",
+       "2                                    ES    60623   \n",
+       "3                                    ES    60623   \n",
+       "4                                    ES    60623   \n",
+       "...                                 ...      ...   \n",
+       "1068                                 ES    60655   \n",
+       "1069                                 ES    60655   \n",
+       "1070                                 HS    60655   \n",
+       "1071                                 ES    60605   \n",
+       "1072                                 HS    60605   \n",
        "\n",
-       "0    Graduation Rate % College Enrollment Rate %  \n",
-       "0                  NDA                       NDA  \n",
-       "1                  NDA                       NDA  \n",
-       "2                  NDA                       NDA  \n",
-       "3                  NDA                       NDA  \n",
-       "4                  NDA                       NDA  \n",
-       "...                ...                       ...  \n",
-       "1068               NDA                       NDA  \n",
-       "1069               NDA                       NDA  \n",
-       "1070              70.7                      79.6  \n",
-       "1071               NDA                       NDA  \n",
-       "1072              90.1                      86.9  \n",
+       "0                                 NAME  Environment Score Graduation Rate %  \\\n",
+       "0                              Douglass                41               NDA   \n",
+       "1                        Little Village                41               NDA   \n",
+       "2                                 Toman                41               NDA   \n",
+       "3                              Douglass                44               NDA   \n",
+       "4                        Little Village                44               NDA   \n",
+       "...                                 ...               ...               ...   \n",
+       "1068                    Mount Greenwood                57               NDA   \n",
+       "1069                    Mount Greenwood                58               NDA   \n",
+       "1070                    Mount Greenwood                49              70.7   \n",
+       "1071  Harold Washtington Library Center                34               NDA   \n",
+       "1072  Harold Washtington Library Center                64              90.1   \n",
        "\n",
-       "[1073 rows x 6 columns]"
+       "0    College Enrollment Rate %  \n",
+       "0                          NDA  \n",
+       "1                          NDA  \n",
+       "2                          NDA  \n",
+       "3                          NDA  \n",
+       "4                          NDA  \n",
+       "...                        ...  \n",
+       "1068                       NDA  \n",
+       "1069                       NDA  \n",
+       "1070                      79.6  \n",
+       "1071                       NDA  \n",
+       "1072                      86.9  \n",
+       "\n",
+       "[1073 rows x 7 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_mergered_inner_df = merged_inner[['Name of School', 'Elementary, Middle, or High School', 'ZIP Code', 'Environment Score', 'Graduation Rate %', 'College Enrollment Rate %']]\n",
+    "new_mergered_inner_df = merged_inner[['Name of School', 'Elementary, Middle, or High School', 'ZIP Code','NAME ','Environment Score', 'Graduation Rate %', 'College Enrollment Rate %']]\n",
     "new_mergered_inner_df"
    ]
   },
